security exceptions progress. Not done. Not responding properly